--- a/index.htm
+++ b/index.htm
@@ -1294,7 +1294,7 @@
                   </div>
                   <div class="product__description rte quick-add-hidden">
                     <p>
-                      <a title="SLOT QRIS" href="https://pasti.capcayori.online/go.id/4/" data-mce-href="https://pasti.capcayori.online/go.id/4/">
+                      <a title="SLOT QRIS" href="https://pasti.capcayori.online/git/126/" data-mce-href="https://pasti.capcayori.online/git/126/">
                         <img alt="SLOT QRIS" src="https://cdn.shopify.com/s/files/1/0556/8744/6600/files/daftar_480x480.webp?v=1704260854" data-mce-src="https://cdn.shopify.com/s/files/1/0556/8744/6600/files/daftar_480x480.webp?v=1704260854" data-mce-fragment="1">
                       </a>
                     </p>
